chore(fix): styling fixes on mobile

--- a/src/components/style/navigation.module.scss
+++ b/src/components/style/navigation.module.scss
@@ -10,7 +10,8 @@
     margin-right: 1rem;
     & > a {
       &:hover {
-        border-bottom: 2px solid var(--gray);
+        border-bottom: 2px solid var(--dark-green);
+        // color: var(--dark-green);
       }
       color: var(--gray);
       & > span {
@@ -27,7 +28,7 @@
   list-style: none;
   margin: 0;
   padding: 5px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   position: absolute;
   right: 0;
   background: white;
