--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -28,14 +28,15 @@
   padding: 10px;
   font-size: 1.25rem;
   line-height: 1.5;
-  padding-top: 0px;
   h3 {
     font-size: 2rem;
     margin: 0;
     margin-bottom: 1rem;
   }
   div {
-    float: left;
+    @media only screen and (min-width: 500px) {
+      float: left;
+    }
     margin-right: 10px;
   }
   p {
