--- a/src/styles/ovcar.module.scss
+++ b/src/styles/ovcar.module.scss
@@ -27,7 +27,9 @@
     margin-bottom: 1rem;
   }
   div {
-    float: left;
+    @media only screen and (min-width: 500px) {
+      float: left;
+    }
     margin-right: 10px;
   }
   p {
